# todolist

./: .coverage  todo.py  todolist.py
todolist_package/: LICENSE  pyproject.toml
todolist_package/src/todolist_tankkarishma.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
todolist_package/tests/: test_todolist.py
