[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "todolist_tankkarishma"
version = "0.1.0"
authors = [
    {name = "KT", email = "tankkarishma@gmail.com"},
]
description = "A todo list application."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/karishmatank/todolist"
Issues = "https://github.com/karishmatank/todolist/issues"